[package]
name = "screens"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
napi = { version = "2", optional = true }
napi-derive = { version = "2", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"
core-graphics = "0.24.0"
core-foundation = "0.10.0"
objc = "0.2.7"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.1", features = [
  "Win32",
  "Win32_Graphics",
  "Win32_Graphics_Gdi",
  "Win32_UI_WindowsAndMessaging",
] }

[features]
default = []
napi = ["dep:napi", "dep:napi-derive"]
